--- a/mbti02.html
+++ b/mbti02.html
@@ -250,7 +250,7 @@
     <a href="#estp" class="text_dec">ESTP</a>ㅣ
     <a href="#esfp" class="text_dec">ESFP</a>ㅣ
     <a href="#enfp" class="text_dec">ENFP</a>ㅣ
-    <a href="#entp" class="text_dec">ESTP</a>ㅣ
+    <a href="#estp" class="text_dec">ESTP</a>ㅣ
     <a href="#estj" class="text_dec">ESTJ</a>ㅣ
     <a href="#esfj" class="text_dec">ESFJ</a>ㅣ
     <a href="#enfj" class="text_dec">ENFJ</a>ㅣ
